# dentrado

./: .gitignore  Cargo.toml  README.md  TODO.md  dentrado-poc  deny.toml  flake.nix
apps/kolorinko/: Cargo.toml
apps/kolorinko-web/: Cargo.toml  index.html
apps/kolorinko-web/src/: main.rs  render.rs
apps/kolorinko-wikitext/: Cargo.toml
apps/kolorinko/src/: lib.rs  main.rs  runtime.rs  safe_path.rs  web.rs  wikidot_page.rs
apps/kolorinko/src/evakuilo_import/: mod.rs
apps/kolorinko/src/wikidot_parser/: mod.rs  types.rs
apps/kolorinko/tests/: syntax.txt  wikidot_parser.rs
dentrado/: Cargo.toml  fadeno-lang
dentrado/src/: lib.rs  types.rs
dentrado/src/core/: core_ctx.rs  db.rs  doorbell.rs  gear.rs  loc_ctx.rs  mod.rs
dentrado/src/fadeno/: bridge.rs  compiler.rs  deser.rs  mod.rs  types.rs  vm.rs  vm_tests.rs
dentrado/src/fs/: fs.rs
dentrado/src/utils/: mod.rs  sg_ord_map.rs  state_graph.rs  state_graph_basic.rs  state_graph_deps.rs  state_graph_poc.rs  text.rs
dentrado/src/wire/: builder.rs  format.rs  merger.rs  mod.rs
dentrado/tests/: counter.rs  fadeno_counter.rs  fadeno_mulsum.rs  wiki2.proptest-regressions  wiki2.rs  wiki2_advanced.rs
dentrado/tests/common/: mod.rs
dentrado/tests/fad/: mulsum4.fad  std.fad  wiki2.fad
dentrado/tests/proptest-regressions/: poc.txt
docs/: kolorinko.md
docs/src/: w1-en.typ  w1-ru.typ  w2-en.typ  w2-ru.typ  w2.bib  w3-en.typ  w3-ru.typ  w3.bib
src/: main.rs  types.rs
src/core/: core_ctx.rs  db.rs  doorbell.rs  gear.rs  loc_ctx.rs  mod.rs
src/fadeno/: bridge.rs  compiler.rs  deser.rs  types.rs  vm.rs  vm_tests.rs
src/utils/: sg_ord_map.rs  state_graph_basic.rs  state_graph_deps.rs  state_graph_poc.rs  text.rs
src/wire/: builder.rs  merger.rs
tests/: counter.rs  fadeno_counter.rs  fadeno_mulsum.rs  wiki2.rs  wiki2_advanced.rs
tests/common/: mod.rs
tests/fad/: mulsum4.fad  std.fad  test_iter.fad  wiki.fad  wiki2.fad
