[package]
name = "dentrado"
version = "0.1.0"
authors = ["Luna Spirito <guardspirit@protonmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Functional-reactive DBMS engine"

[dependencies]
blake3 = "1"
crc32fast = "1"
compio = { version = "0.19.1", features = ["fs", "time", "runtime"] }
flume = "0.11"
futures = "0.3"
synchrony = { version = "0.1.7", features = ["watch", "event"] }
libc = "0.2"
rkyv = { version = "0.8", features = ["bytecheck"] }
im = "15"
serde_json = "1"
base64 = "0.22"
similar = { version = "3", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
