[package]
name = "kolorinko"
version = "0.1.0"
authors = ["Luna Spirito <guardspirit@protonmail.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.102"
chumsky = "0.13.0"
compio = { version = "0.19.1", features = [
  "runtime",
  "io-uring",
  "fs",
  "net",
  "ws",
  "time",
] }
dentrado = { path = "../../dentrado" }
env_logger = "0.11.10"
kolorinko-wikitext = { path = "../kolorinko-wikitext" }
serde_json = "1"
git2 = "0.21.0"
log = "0.4.32"
serde = "1.0.228"

[[bin]]
name = "kolorinko"
path = "src/main.rs"
